# DND_character_creator

./: .gitignore  .pre-commit-config.yaml  TODO  main.py  pyproject.toml
_templates/default/: pyproject.toml
_templates/pre_commit_hook/: pyproject.toml
dndtemplate/: aaliyah.aux  nende.tex
src/DND_character_creator/: BackgroundTemplate.py  character.py  character_additional_info.py  character_base.py  character_details_filler.py  character_full.py  character_wrapper.py  config.py  custom_argument_parser.py  feats.py  other_profficiencies.py  signed_int.py  skill_proficiency.py
src/DND_character_creator/choices/: alignment.py  language.py  main_race.py  race.py  sex.py
src/DND_character_creator/choices/background_creatrion/: background2stats.py
src/DND_character_creator/choices/battle_maneuvers/: battle_maneuvers.py
src/DND_character_creator/choices/class_creation/: character_class.py
src/DND_character_creator/choices/equipment_creation/: armor.py  item.py  weapons.py
src/DND_character_creator/choices/fighting_styles/: fighting_styles.py
src/DND_character_creator/pdf_creator/: create_pdf.py  prototype.tex  remove_blank_page.py  update_prototype.py
src/DND_character_creator/wiki_scraper/: AbilityTemplate.py  BackgroundTemplate.py  FeatTemplate.py  MainClassTemplate.py  MainRaceTemplate.py  scrape_background.py  scrape_class.py  scrape_feat.py  scrape_main_class.py  scrape_main_class_abilities.py  scrape_sub_class.py  scrape_wiki_race.py  scrape_wiki_race_ability.py  scrape_wiki_spell.py
tests/: test_druid.py  test_fighter.py  test_generation.py
(+157 files in other folders)
